students/KhomichVitaliy/task_02/src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web42
  namespace: app42
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: web42.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web42
                port:
                  number: 7992
